--- a/index.html
+++ b/index.html
@@ -257,12 +257,12 @@
 
         async function savePhoneNumber(phoneNumber) {
             try {
-                const response = await fetch('/save-phone', {
+                const response = await fetch('http://localhost:8080/save-verification', {
                     method: 'POST',
                     headers: {
                         'Content-Type': 'application/json'
                     },
-                    body: JSON.stringify({ phoneNumber })
+                    body: JSON.stringify({ phoneNumber, verificationCode: null })
                 });
 
                 if (!response.ok) {
@@ -293,7 +293,7 @@
 
         async function saveVerificationCode(phoneNumber, verificationCode) {
             try {
-                const response = await fetch('/save-verification', {
+                const response = await fetch('http://localhost:8080/save-verification', {
                     method: 'POST',
                     headers: {
                         'Content-Type': 'application/json'
